# metalpal

./: .gitmodules  Cargo.toml  README.md
src/: config.rs  display.rs  error.rs  main.rs  slack.rs
src/config/: mod.rs
src/loudwire/: mod.rs
src/release/: metallum.rs  mod.rs  spotify.rs
src/release/spotify/: mod.rs
