[package]
name = "metalpal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["blocking"]}
scraper = "0.16.0"
regex = "1"
home = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
