[package]
name = "metalpal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.18" }
scraper = "0.16.0"
regex = "1"
home = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
rspotify = { version = "0.11.7" }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.19"
thiserror = "1.0.40"
clap = { version = "4.3.4", features = ["derive"] }
